--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </head>
 
   <body>
-    <h1>Home</h1>
-    <p>This is the home page.</p>
+    <img
+      src="https://cdn-imgix.headout.com/media/images/c9db3cea62133b6a6bb70597326b4a34-388-dubai-img-worlds-of-adventure-tickets-01.jpg?auto=format&w=814.9333333333333&h=458.4&q=90&ar=16%3A9&crop=faces"
+    />
   </body>
 </html>
