--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@
     <meta property="og:image:secure_url"
     content=https://cdn-imgix.headout.com/media/images/c9db3cea62133b6a6bb70597326b4a34-388-dubai-img-worlds-of-adventure-tickets-01.jpg?auto=format&w=814.9333333333333&h=458.4&q=90&ar=16%3A9&crop=faces"
     />
+    <meta image="" />
     <meta property="og:description" content="This is just an example page." />
     <meta property="og:url" content="https://example.com/page.html" />
-    <meta name="twitter:card" content="summary_large_image" />
-  </head>
 
-  <body>
-    <img
-      src="https://cdn-imgix.headout.com/media/images/c9db3cea62133b6a6bb70597326b4a34-388-dubai-img-worlds-of-adventure-tickets-01.jpg?auto=format&w=814.9333333333333&h=458.4&q=90&ar=16%3A9&crop=faces"
+    <meta name="twitter:card" content="summary" />
+    <meta property="twitter:title" content="Website's title" />
+    <meta
+      property="twitter:description"
+      content="Lorem ipsum dol sor em convectur"
     />
-  </body>
+    <meta
+      property="twitter:image"
+      content="https://cdn-imgix.headout.com/media/images/c9db3cea62133b6a6bb70597326b4a34-388-dubai-img-worlds-of-adventure-tickets-01.jpg?auto=format&w=814.9333333333333&h=458.4&q=90&ar=16%3A9&crop=faces"
+    />
+    <meta property="twitter:url" content="https://website.com/" />
+    <script>
+      alert("Hello, World!");
+    </script>
+  </head>
 </html>
