--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
   <head>
     <title>Home</title>
 
-    <meta property="og:title" content="Example Page" />
-    <meta property="og:image:secure_url"
-    content=https://cdn-imgix.headout.com/media/images/c9db3cea62133b6a6bb70597326b4a34-388-dubai-img-worlds-of-adventure-tickets-01.jpg?auto=format&w=814.9333333333333&h=458.4&q=90&ar=16%3A9&crop=faces"
+    <!-- Meta -->
+    <meta property="og:title" content="The Rock" />
+    <meta property="og:type" content="video.movie" />
+    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+    <meta
+      property="og:image"
+      content="https://www.imgacademy.com/sites/default/files/boarding-homepage-row-2022.jpg"
     />
-    <meta property="og:description" content="This is just an example page." />
-    <meta property="og:url" content="https://example.com/page.html" />
+
+    <!-- Twitter -->
+    <meta name="twitter:title" content="European Travel Destinations " />
+    <meta
+      name="twitter:description"
+      content=" Offering tour packages for individuals or groups."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.imgacademy.com/sites/default/files/boarding-homepage-row-2022.jpg"
+    />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
-
-  <body>
-    <img src="https://cdn-imgix.headout.com/media/images/c9db3cea62133b6a6bb70597326b4a34-388-dubai-img-worlds-of-adventure-tickets-01.jpg?auto=format&w=814.9333333333333&h=458.4&q=90&ar=16%3A9&crop=faces"/>
-  </body>
 </html>
